cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 98)
project(cpp)
set(CMAKE_C_FLAGS		"${CMAKE_C_FLAGS} -Wall -Wextra -Werror -lncurses")
set(SRC_PATH			sources)
set(INC_PATH			includes)
include_directories(	${INC_PATH})
#link_directories( )
aux_source_directory(	${SRC_PATH} SOURCE_FILES)
add_executable(			${CMAKE_PROJECT_NAME} ${SOURCE_FILES} sources/stage_two.cpp)
target_link_libraries(	${CMAKE_PROJECT_NAME})